fix: chiffre vertical alignment

--- a/css/publication.css
+++ b/css/publication.css
@@ -104,7 +104,7 @@ font-family: Arial;
 	line-height:30px;
 	display:block;
 	position:absolute;
-	top:10px;
+	top:2px;
 	left:2%;
 }
 
